--- a/tests/fixtures/LeckPullCheck.yaml
+++ b/tests/fixtures/LeckPullCheck.yaml
@@ -102,17 +102,17 @@ interactions:
         class=\"task-list\">\n<li> Sum of +2 from authorized reviewers (comment with
         \"+1\" or \"<img class=\"emoji\" title=\":+1:\" alt=\":+1:\" src=\"https://api.examplegh.com/images/icons/emoji/%2B1.png\"
         height=\"20\" width=\"20\" align=\"absmiddle\">\", if authorized)</li>\n<li>
-        Merge comment from an authroized reviewer (comment with \"merge\", if authorized;
+        Merge comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)</li>\n<li> Summarize pull-request comments into
         the merge commit (for review in git history)</li>\n</ul><p>More info: <a href=\"http://example.com/leckhelp\">Leck</a></p>","body_text":"Leck
         PR automation\n\nReviews pull requests for matching criteria:\n\n Sum of +2
         from authorized reviewers (comment with \"+1\" or \"\", if authorized)\n Merge
-        comment from an authroized reviewer (comment with \"merge\", if authorized;
+        comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)\n Summarize pull-request comments into the merge
         commit (for review in git history)\nMore info: Leck","body":"### Leck PR automation\n\nReviews
         pull requests for matching criteria:\n\n*  Sum of +2 from authorized reviewers
         (comment with \"+1\" or \":+1:\", if authorized)\n*  Merge comment from an
-        authroized reviewer (comment with \"merge\", if authorized; to replace the
+        authorized reviewer (comment with \"merge\", if authorized; to replace the
         merge button)\n*  Summarize pull-request comments into the merge commit (for
         review in git history)\n\nMore info: [Leck](http://example.com/leckhelp)\n"},{"url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/comments/4556","html_url":"https://api.examplegh.com/org/repo/pull/2#issuecomment-4556","issue_url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/2","id":4556,"user":{"login":"org","id":193,"avatar_url":"https://gravatar.com/avatar/72937213e2addb3e5a0601829622d103?d=https%3A%2F%2Fidenticons.github.com%2Fbd686fd640be98efaae0091fa301e613.png&r=x","gravatar_id":"72937213e2addb3e5a0601829622d103","url":"https://api.examplegh.com/api/v3/users/org","html_url":"https://api.examplegh.com/org","followers_url":"https://api.examplegh.com/api/v3/users/org/followers","following_url":"https://api.examplegh.com/api/v3/users/org/following{/other_user}","gists_url":"https://api.examplegh.com/api/v3/users/org/gists{/gist_id}","starred_url":"https://api.examplegh.com/api/v3/users/org/starred{/owner}{/repo}","subscriptions_url":"https://api.examplegh.com/api/v3/users/org/subscriptions","organizations_url":"https://api.examplegh.com/api/v3/users/org/orgs","repos_url":"https://api.examplegh.com/api/v3/users/org/repos","events_url":"https://api.examplegh.com/api/v3/users/org/events{/privacy}","received_events_url":"https://api.examplegh.com/api/v3/users/org/received_events","type":"User","site_admin":true},"created_at":"2014-11-17T22:39:11Z","updated_at":"2014-11-17T22:39:11Z","body_html":"<p><img
         class=\"emoji\" title=\":-1:\" alt=\":-1:\" src=\"https://api.examplegh.com/images/icons/emoji/-1.png\"
@@ -185,17 +185,17 @@ interactions:
         class=\"task-list\">\n<li> Sum of +2 from authorized reviewers (comment with
         \"+1\" or \"<img class=\"emoji\" title=\":+1:\" alt=\":+1:\" src=\"https://api.examplegh.com/images/icons/emoji/%2B1.png\"
         height=\"20\" width=\"20\" align=\"absmiddle\">\", if authorized)</li>\n<li>
-        Merge comment from an authroized reviewer (comment with \"merge\", if authorized;
+        Merge comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)</li>\n<li> Summarize pull-request comments into
         the merge commit (for review in git history)</li>\n</ul><p>More info: <a href=\"http://example.com/leckhelp\">Leck</a></p>","body_text":"Leck
         PR automation\n\nReviews pull requests for matching criteria:\n\n Sum of +2
         from authorized reviewers (comment with \"+1\" or \"\", if authorized)\n Merge
-        comment from an authroized reviewer (comment with \"merge\", if authorized;
+        comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)\n Summarize pull-request comments into the merge
         commit (for review in git history)\nMore info: Leck","body":"### Leck PR automation\n\nReviews
         pull requests for matching criteria:\n\n*  Sum of +2 from authorized reviewers
         (comment with \"+1\" or \":+1:\", if authorized)\n*  Merge comment from an
-        authroized reviewer (comment with \"merge\", if authorized; to replace the
+        authorized reviewer (comment with \"merge\", if authorized; to replace the
         merge button)\n*  Summarize pull-request comments into the merge commit (for
         review in git history)\n\nMore info: [Leck](http://example.com/leckhelp)\n"},{"url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/comments/4556","html_url":"https://api.examplegh.com/org/repo/pull/2#issuecomment-4556","issue_url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/2","id":4556,"user":{"login":"org","id":193,"avatar_url":"https://gravatar.com/avatar/72937213e2addb3e5a0601829622d103?d=https%3A%2F%2Fidenticons.github.com%2Fbd686fd640be98efaae0091fa301e613.png&r=x","gravatar_id":"72937213e2addb3e5a0601829622d103","url":"https://api.examplegh.com/api/v3/users/org","html_url":"https://api.examplegh.com/org","followers_url":"https://api.examplegh.com/api/v3/users/org/followers","following_url":"https://api.examplegh.com/api/v3/users/org/following{/other_user}","gists_url":"https://api.examplegh.com/api/v3/users/org/gists{/gist_id}","starred_url":"https://api.examplegh.com/api/v3/users/org/starred{/owner}{/repo}","subscriptions_url":"https://api.examplegh.com/api/v3/users/org/subscriptions","organizations_url":"https://api.examplegh.com/api/v3/users/org/orgs","repos_url":"https://api.examplegh.com/api/v3/users/org/repos","events_url":"https://api.examplegh.com/api/v3/users/org/events{/privacy}","received_events_url":"https://api.examplegh.com/api/v3/users/org/received_events","type":"User","site_admin":true},"created_at":"2014-11-17T22:39:11Z","updated_at":"2014-11-17T22:39:11Z","body_html":"<p><img
         class=\"emoji\" title=\":-1:\" alt=\":-1:\" src=\"https://api.examplegh.com/images/icons/emoji/-1.png\"
@@ -268,17 +268,17 @@ interactions:
         class=\"task-list\">\n<li> Sum of +2 from authorized reviewers (comment with
         \"+1\" or \"<img class=\"emoji\" title=\":+1:\" alt=\":+1:\" src=\"https://api.examplegh.com/images/icons/emoji/%2B1.png\"
         height=\"20\" width=\"20\" align=\"absmiddle\">\", if authorized)</li>\n<li>
-        Merge comment from an authroized reviewer (comment with \"merge\", if authorized;
+        Merge comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)</li>\n<li> Summarize pull-request comments into
         the merge commit (for review in git history)</li>\n</ul><p>More info: <a href=\"http://example.com/leckhelp\">Leck</a></p>","body_text":"Leck
         PR automation\n\nReviews pull requests for matching criteria:\n\n Sum of +2
         from authorized reviewers (comment with \"+1\" or \"\", if authorized)\n Merge
-        comment from an authroized reviewer (comment with \"merge\", if authorized;
+        comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)\n Summarize pull-request comments into the merge
         commit (for review in git history)\nMore info: Leck","body":"### Leck PR automation\n\nReviews
         pull requests for matching criteria:\n\n*  Sum of +2 from authorized reviewers
         (comment with \"+1\" or \":+1:\", if authorized)\n*  Merge comment from an
-        authroized reviewer (comment with \"merge\", if authorized; to replace the
+        authorized reviewer (comment with \"merge\", if authorized; to replace the
         merge button)\n*  Summarize pull-request comments into the merge commit (for
         review in git history)\n\nMore info: [Leck](http://example.com/leckhelp)\n"},{"url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/comments/4556","html_url":"https://api.examplegh.com/org/repo/pull/2#issuecomment-4556","issue_url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/2","id":4556,"user":{"login":"org","id":193,"avatar_url":"https://gravatar.com/avatar/72937213e2addb3e5a0601829622d103?d=https%3A%2F%2Fidenticons.github.com%2Fbd686fd640be98efaae0091fa301e613.png&r=x","gravatar_id":"72937213e2addb3e5a0601829622d103","url":"https://api.examplegh.com/api/v3/users/org","html_url":"https://api.examplegh.com/org","followers_url":"https://api.examplegh.com/api/v3/users/org/followers","following_url":"https://api.examplegh.com/api/v3/users/org/following{/other_user}","gists_url":"https://api.examplegh.com/api/v3/users/org/gists{/gist_id}","starred_url":"https://api.examplegh.com/api/v3/users/org/starred{/owner}{/repo}","subscriptions_url":"https://api.examplegh.com/api/v3/users/org/subscriptions","organizations_url":"https://api.examplegh.com/api/v3/users/org/orgs","repos_url":"https://api.examplegh.com/api/v3/users/org/repos","events_url":"https://api.examplegh.com/api/v3/users/org/events{/privacy}","received_events_url":"https://api.examplegh.com/api/v3/users/org/received_events","type":"User","site_admin":true},"created_at":"2014-11-17T22:39:11Z","updated_at":"2014-11-17T22:39:11Z","body_html":"<p><img
         class=\"emoji\" title=\":-1:\" alt=\":-1:\" src=\"https://api.examplegh.com/images/icons/emoji/-1.png\"
@@ -430,17 +430,17 @@ interactions:
         class=\"task-list\">\n<li> Sum of +2 from authorized reviewers (comment with
         \"+1\" or \"<img class=\"emoji\" title=\":+1:\" alt=\":+1:\" src=\"https://api.examplegh.com/images/icons/emoji/%2B1.png\"
         height=\"20\" width=\"20\" align=\"absmiddle\">\", if authorized)</li>\n<li>
-        Merge comment from an authroized reviewer (comment with \"merge\", if authorized;
+        Merge comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)</li>\n<li> Summarize pull-request comments into
         the merge commit (for review in git history)</li>\n</ul><p>More info: <a href=\"http://example.com/leckhelp\">Leck</a></p>","body_text":"Leck
         PR automation\n\nReviews pull requests for matching criteria:\n\n Sum of +2
         from authorized reviewers (comment with \"+1\" or \"\", if authorized)\n Merge
-        comment from an authroized reviewer (comment with \"merge\", if authorized;
+        comment from an authorized reviewer (comment with \"merge\", if authorized;
         to replace the merge button)\n Summarize pull-request comments into the merge
         commit (for review in git history)\nMore info: Leck","body":"### Leck PR automation\n\nReviews
         pull requests for matching criteria:\n\n*  Sum of +2 from authorized reviewers
         (comment with \"+1\" or \":+1:\", if authorized)\n*  Merge comment from an
-        authroized reviewer (comment with \"merge\", if authorized; to replace the
+        authorized reviewer (comment with \"merge\", if authorized; to replace the
         merge button)\n*  Summarize pull-request comments into the merge commit (for
         review in git history)\n\nMore info: [Leck](http://example.com/leckhelp)\n"},{"url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/comments/4556","html_url":"https://api.examplegh.com/org/repo/pull/2#issuecomment-4556","issue_url":"https://api.examplegh.com/api/v3/repos/org/repo/issues/2","id":4556,"user":{"login":"org","id":193,"avatar_url":"https://gravatar.com/avatar/72937213e2addb3e5a0601829622d103?d=https%3A%2F%2Fidenticons.github.com%2Fbd686fd640be98efaae0091fa301e613.png&r=x","gravatar_id":"72937213e2addb3e5a0601829622d103","url":"https://api.examplegh.com/api/v3/users/org","html_url":"https://api.examplegh.com/org","followers_url":"https://api.examplegh.com/api/v3/users/org/followers","following_url":"https://api.examplegh.com/api/v3/users/org/following{/other_user}","gists_url":"https://api.examplegh.com/api/v3/users/org/gists{/gist_id}","starred_url":"https://api.examplegh.com/api/v3/users/org/starred{/owner}{/repo}","subscriptions_url":"https://api.examplegh.com/api/v3/users/org/subscriptions","organizations_url":"https://api.examplegh.com/api/v3/users/org/orgs","repos_url":"https://api.examplegh.com/api/v3/users/org/repos","events_url":"https://api.examplegh.com/api/v3/users/org/events{/privacy}","received_events_url":"https://api.examplegh.com/api/v3/users/org/received_events","type":"User","site_admin":true},"created_at":"2014-11-17T22:39:11Z","updated_at":"2014-11-17T22:39:11Z","body_html":"<p><img
         class=\"emoji\" title=\":-1:\" alt=\":-1:\" src=\"https://api.examplegh.com/images/icons/emoji/-1.png\"
